<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChessHero</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password2">Re-enter password</string>
    <string name="login">Login</string>
    <string name="registration_link">New to ChessHero?\nRegister here</string>
    <string name="register">Register New Account</string>
    <string name="login_link">Already have an account?\nLogin here</string>
    <string name="play_white">Play White</string>
    <string name="play_black">Play Black</string>
    <string name="empty_string">...</string>
    <string name="turn_limit">Turn Time Limit in Minutes</string>
    <string name="game_limit">Game Time Limit in Minutes</string>
    <string name="min_level">Minimum Opponent Level</string>
    <string name="max_level">Maximum Opponent Level</string>
    <string name="cancel_game"> Cancel Game </string>
    <string name="back_lobby"> Back to Lobby </string>
    <string name="Enter_game_name">Enter a Name for Your Game</string>
    <string name="title_activity_lobby_activiy">LobbyActiviy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exception"></string>
    <string name="moves_log">show previous moves</string>
    <string name="leave_game">leave game</string>
    <string name="lobby_page_title">Available Games</string>
    <string name="game_name_title">Game name</string>
    <string name="created_by_title">Created by</string>
    <string name="oponnent_color_title">Opponent Color</string>
    <string name="create_game_btn_title">Create Game</string>
    <string name="logout_btn_title">Logout</string>
    <string name="refresh_btn_title">Refresh</string>
    <string name="join_game_instructions"> *Tap on a game to join</string>
    <string name="create_game_page_title">Create New Game</string>

</resources>
