<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/header_gradient"
        android:gravity="center"
        android:paddingBottom="5dip"
        android:paddingTop="5dip">
        <!-- Logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:src="@drawable/chesshero" />
        <!-- Logo ends -->
    </LinearLayout>
    <!--Header ends  -->

    <!-- Lobby beggins -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:padding="10dip"
        android:visibility="visible">

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#ffffd204"
            android:gravity="center"
            android:onClick="refresh"
            android:text="@string/refresh_btn_title"
            android:textColor="#00467f"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="300dip"
            android:fillViewport="true"
            android:orientation="vertical"
            tools:ignore="ContentDescription">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#d3d3d3"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <!-- Title Row -->
                <TableRow
                    android:id="@+id/row_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dip"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_span="3"
                        android:background="#b0b0b0"
                        android:gravity="center_horizontal"
                        android:padding="18dip"
                        android:text="@string/lobby_page_title"
                        android:textColor="#00467f"
                        android:textSize="20sp" />
                </TableRow>

                <!-- Subtitle Row -->
                <TableRow
                    android:id="@+id/row_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:background="#d3d3d3"
                        android:gravity="center"
                        android:padding="20dip"
                        android:text="@string/game_name_title"
                        android:textColor="#00467f"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:background="#d3d3d3"
                        android:gravity="center"
                        android:padding="20dip"
                        android:text="@string/created_by_title"
                        android:textColor="#00467f"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:background="#d3d3d3"
                        android:gravity="center"
                        android:padding="20dip"
                        android:text="@string/oponnent_color_title"
                        android:textColor="#00467f"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
        </ScrollView>

        <TextView
            android:id="@+id/join_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/join_game_instructions"
            android:textColor="#00467f"
            android:textSize="20sp" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#ffffd204"
            android:gravity="center"
            android:onClick="createGame"
            android:text="@string/create_game_btn_title"
            android:textColor="#00467f"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#ffffd204"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:onClick="logout"
            android:text="@string/logout_btn_title"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- Lobby ends -->
</RelativeLayout>




