<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <!--  Header -->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:gravity="center">

            <!-- Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:src="@drawable/chesshero" />
            <!-- Logo Ends -->

        </LinearLayout>
        <!--  Header Ends -->

        <!-- Footer -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:orientation="vertical" />
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip">

            <!-- Username Label and input field -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#00467f" />

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Password Label and input field -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#00467f" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Re-enter Password Label and input field -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password2"

                android:textColor="#00467f" />



            <EditText
                android:id="@+id/reg_password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />

            <!-- Register Button -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="#00467f"/>




            <!-- Link to Login Screen -->
            <TextView
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:clickable="true"
                android:gravity="center"
                android:onClick="openLoginPage"
                android:text="@string/login_link"
                android:textColor="#00467f"
                android:textSize="20sp" />

        </LinearLayout>
        <!-- Registration Form Ends -->

    </RelativeLayout>

</ScrollView>