<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:gravity="center" >

            <!-- Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:src="@drawable/chesshero" />
            <!-- Logo ends -->

        </LinearLayout>
        <!--Header ends  -->

        <!-- Footer -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:orientation="vertical" />
        <!-- Footer Ends -->

        <!-- Login Form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip"
            android:id="@+id/linearLayout2">

            <!--  Username Label and input field -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#00467f" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true" />

            <!--  Password Label and input field -->
            <TextView
                android:id="@+id/pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#00467f" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />


            <!-- Login button -->


            <!-- Link to Registration Screen -->

        </LinearLayout>

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="openRegisterPage"
            android:text="@string/registration_link"
            android:textColor="#00467f"
            android:textSize="20sp"
            android:layout_below="@+id/btnLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="login"

            android:text="@string/login"
            android:textColor="#00467f"

            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exceptions"
            android:text="@string/exception"
            android:textStyle="bold"
            android:textSize="12pt"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor = "#FF0000"
            android:layout_above="@+id/btnLogin"/>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>
